# decima-native

./: .gitmodules  CMakeLists.txt  ggrtti_base.h
include/: json.h  memory.h  rtti.h  rtti.hpp  rtti_types.h  scan.h  scan.hpp
source/: Offsets.cpp  Offsets.h  RTTI.cpp  RTTI.h  XUtil.cpp  XUtil.h  main.c  main.cpp
source/Core/: RTTI.cpp  RTTI.h  RTTIObject.h  RTTIRefObject.h
source/PCore/: Array.h  Ref.h  String.h  UUID.h
src/: exports.c  json.c  main.c  main.cpp  memory.c  rtti.c  rtti.cpp  scan.c  scan.cpp
